# dbx-finance-ecosystem

./: .gitignore  README.md  databricks.yml  requirements-ml.txt  requirements.txt
.ai-dev-kit/: .installed-skills
.claude/: settings.json
.cursor/: mcp.json
_demo/: 00_design_context.md  _TODO.md
apps/: README.md  build_frontends.sh
apps/helios-sourcing-portal/: .gitignore  README.md  app.yaml  requirements.txt
apps/helios-sourcing-portal/backend/: auth.py  config.py  db.py  lakebase.py  main.py  models.py  pyproject.toml
apps/helios-sourcing-portal/backend/routers/: chatbot.py  contracts.py  cost_savings.py  labeling.py  suppliers.py  system.py
dashboards/: README.md
data/generators/: 00_macro_environment.py  01_period_anchors_seed.py  02_ariba_files.py  03_fusion_files.py  04_cms_files.py  05_workday_workers.py  99_reconcile.py  README.md  _lib.py
data/ml/: regenerate_quarter.py  review_anchor_draft.py
docs/: README.md
jobs/: build_lakehouse.yml  generate_data.yml  ingest_10q.yml  train_spend_classifier.yml
ml/: README.md
ml/notebooks/: 01_extract_10q.py  02_review_anchor_draft.py  03_regenerate_quarter.py  99_validate_gold_vs_anchors.py  validate_gold_vs_anchors.py
ml/spend_classification/: batch_inference.py  evaluate.py  prepare_features.py  sourcing_strategy_view.py  train_baseline.py  train_embedding.py
pipelines/bronze/: inhouse_cms.sql  oracle_fusion.sql  sap_ariba.sql
pipelines/gold/: dim_account.sql  dim_cost_center.sql  (+13 more)
resources/: apps.yml  catalog.yml  pipeline.yml
scripts/: validate_genie_sp_access.py
sql/: README.md
(+88 files in other folders)
