[project]
name = "helios-sourcing-portal-backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "databricks-sdk>=0.81",
  "databricks-sql-connector>=3.4",
  "psycopg[binary,pool]>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.6", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
  "main.py", "auth.py", "config.py", "db.py", "lakebase.py",
  "models.py", "routers/**", "queries/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
